--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -45,6 +45,30 @@
 
                     {% if enforcements|length == 0 %}
                         <p class="text-info">No results found for state: {{ q|replace_plus_signs }}</p>
+                    {% else %}
+                         <span>{{ enforcements_paginator.page_display }}</span>
+                         {% if enforcements_paginator.pages > 1 %}
+                        <nav>
+                           <ul class="pagination pagination-sm">
+                               <li {% if enforcements_paginator.has_previous %}{% else %}class="disabled"{% endif %}><a href="?q={{q}}&amp;page={{enforcements_paginator.prev}}" class="prev">prev</a></li>
+                              
+                               {% for page_number in enforcements_paginator.pagination_display %}
+                         
+                               {% ifequal page_number "..." %}
+                               <li><span>...</span></li>
+                               {% else %}
+                               {% ifequal page_number enforcements_paginator.page %}
+                               <li class="disabled"><span>{{page_number}}</span></li>
+                               {% else %}
+                               <li><a href="?q={{q}}&amp;page={{page_number}}">{{page_number}}</a></li>
+                               {% endifequal %}
+                               {% endifequal %}
+                               {% endfor %}
+                                     
+                               <li {% if enforcements_paginator.has_next %}{% else %}class="disabled"{% endif %}><a href="?q={{q}}&amp;page={{enforcements_paginator.next}}" class="next">next</a></li>
+                           </ul>
+                         </nav>
+                        {% endif %}
                     {% endif %}
 
                     {% for result in enforcements %}
