--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -8,23 +8,14 @@
 <title>FDA Drug Monitor - Enforcement Reports</title>
 {% endblock %}
 
-{% block image %}
-    <img src="{% static "images/enforceable-short.png" %}" class="img-responsive center-block" alt="enforcement reports banner image">
-{% endblock %}
-
-{% block search %}
-    {% include 'core/searchbar.html' with search_category='enforcements'%}
-{% endblock %}
-
 {% block text %}
-    <div class="row">
-        <div class="col-xs-12">
-            <h1>Enforcement Reports</h1>
-            <p>Select a state from the map below or enter a state into the search above
-                to view current related information</p>
-        </div>
-    </div>
+    <h1 class="page-title">Enforcement Reports</h1>
+    <p class="page-description">Select a state from the map below or enter a state into the search above
+        to view current related information</p>
+{% endblock %}
 
+{% block details %}
+    <!-- highcharts map -->
     <div class="row">
         <div class="col-xs-12">
             <div class="panel">
@@ -35,33 +26,9 @@
             </div>
         </div>
     </div>
-{% endblock %}
 
-{% block details %}
     <!-- browse list -->
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="panel">
-                <div class="panel-body">
-
-                    {% include 'core/alphanav.html' %}
-
-                    <dl class="list-group fda-list-group">
-                        <dt class="list-group-item">
-                            State
-                        </dt>
-                        {% for term in terms %}
-                         <dd class="list-group-item letter {{ term.term.0|lower }}">
-                            <a href="{% url 'search_enforcements' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }}
-                                <span class="badge pull-right">{{ term.count|intcomma }}</span>
-                            </a>
-                        </dd>
-                        {% endfor %}
-                    </dl>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include 'core/browse.html' with search_url='search_enforcements' show_count=True %}
 {% endblock %}
 
 {% block extra_js %}
