--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -14,13 +14,23 @@
     <title>FDA Drug Monitor</title>
     {% endblock %}
 
-    <link href="{% static "bootstrap-3.3.5-dist/css/paper.css" %}" rel="stylesheet">
+
     <link href="{% static "jquery-ui-1.11.4.custom/jquery-ui.css" %}" rel="stylesheet">
-    <link href="{% static "css/core.css" %}" rel="stylesheet">
+    <!-- if (development) -->
+    <link href="{% static "css/style.less" %}" type='text/css' rel="stylesheet/less"/>
+    <script type="text/javascript">
+        less = {
+            env: "development",
+            dumpLineNumbers: "comments",
+            strictMath: false
+        };
+    </script>
+    <script src="{% static "js/less-1.4.2.js" %}" type="text/javascript"></script>
+    <!-- else -->
+    <!-- <link href='css/style.css' type='text/css' rel="stylesheet"/> -->
+    <!-- endif -->
 
-    {% block extra_css %}
-    {% endblock %}
-
+{# TODO -- download actual files below--not CDN #}
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -30,29 +40,33 @@
 </head>
 
 <body>
-    <header>
-    <nav class="navbar navbar-default">
-        <div class="container" style="max-width:1024px;">
-        <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> </button>
-                <a class="navbar-brand" href="{%  url 'homepage' %}">FDA Drug Monitor</a>
-            </div>
-            <div id="bs-example-navbar-collapse-9" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li> <a href="{% url 'browse_labels' %}">Drug Names</a> </li>
-                    <li> <a href="{% url 'browse_events' %}">Adverse Events</a> </li>
-                    <li> <a href="{% url 'browse_enforcements' %}">Enforcement Reports</a> </li>
-                    <li> <a href="{% url 'browse_manufacturers' %}">Drug Manufacturers</a> </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    </header>
+<div class="container">
+    <header class="fdahead">
+		<button class="fdahead-nav-toggle"><span>show navigation</span></button>
+		<span class="fdahead-logo"><a href="/"><img title="Official FDA Logo" width="92" height="38" alt="" src="{% static "images/fda-logo.png" %}"> <span>Drug Monitor</span></a></span>
+		<nav class="fdahead-nav">
+			<ul class="">
+				<li class="one"><a href="{% url 'browse_labels' %}">Drug Names</a> </li>
+				<li class="two"><a href="{% url 'browse_events' %}">Adverse Events</a> </li>
+				<li class="three"><a href="{% url 'browse_enforcements' %}">Enforcement Reports</a> </li>
+				<li class="four"><a href="{% url 'browse_manufacturers' %}">Drug Manufacturers</a> </li>
+			</ul>
+		</nav>
+		<div class="fdahead-search">
+			<form class="" action="" method="get" name="main_search" id="mainsearch">
+				<select class="" id="select-category">
+					<option>Select a search category</option>
+					<option value="search_labels">Drug Names</option>
+					<option value="search_events">Adverse Events</option>
+					<option value="search_enforcements">Enforcement Reports</option>
+					<option value="search_manufacturers">Manufacturers</option>
+				</select><!--
+				--><input type="search" class="" name="q" id="search-term" placeholder="Enter keyword"><!--
+				--><button class="" type="submit" id="search-category"><span>GO</span><i></i></button>
+			</form>
+		</div>
+	</header>
+
 
     <!-- javascript enabled message -->
     <noscript>
@@ -62,20 +76,10 @@
     </noscript>
 
     <!-- end nav/begin body -->
+  	<div class="content">
     <main role="main">
-        <div class="container" style="max-width:1024px;">
+
         {% block body %}
-
-            <div class="row">
-                {% block image %}
-                {% endblock %}
-            </div>
-
-            <div class="row" style="margin-top:15px;">
-                {% block search %}
-                    {% include 'core/searchbar.html' %}
-                {% endblock %}
-            </div>
 
             <div class="row">
                 <div class="col-xs-12">
@@ -92,180 +96,31 @@
             </div>
 
         {% endblock %}
-        </div>
-    </main>
 
-    <!-- end body/begin footer -->
-    <footer class="footer">
-        <div class="container" style="max-width:1024px;">
-            <div class="row" style="margin-top:15px;">
-                <div class="col-xs-12 text-center">
-                    <ul class="list-inline">
-                        <li><a href="{% url 'about' %}">About</a></li>
-                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
-                        <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <a href="{% url 'about' %}#licensing">Licensing Information</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <p class="text-warning"><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla,
-                        eget malesuada urna justo at ex.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    </main>
+    </div>
+
+    <footer class="fdafoot">
+		<ul>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'contact' %}">Contact Us</a></li>
+            <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
+            <li><a href="{% url 'about' %}#licensing">Licensing Information</a></li>
+		</ul>
+        <p class="text-warning"><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla,
+            eget malesuada urna justo at ex.</p>
+	</footer><!-- end footer -->
+
 
     <script src="{% static "js/jquery-2.1.3.min.js" %}"></script>
-    <script src="{% static "jquery-ui-1.11.4.custom/jquery-ui.min.js" %}"></script>
+    <script src="{% static "js/jquery-ui.js" %}"></script>
     <script src="{% static "highcharts-4.1.6/highcharts.js" %}"></script>
-    <script src="{% static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/states.js" %}"></script>
-
-    <script>
-// search bar functionality
-    var searchOptions = ['search_labels', 'search_events', 'search_enforcements'];
-
-    // search go button onclick handler
-    $("#search-category").click(function() {
-        var url_category = $('#select-category').val();
-        var search_term = $('#search-term').val();
-        var search_state = $('#search-state').val();
-
-        // if user types something or uses autocomplete, look for it in states
-        if (search_state) {
-            $(usStates).each(function() {
-                if (search_state == this.value || search_state == this.label) {
-                    search_state = this.value;
-                    $('#search-state').val(search_state);
-                }
-            });
-        }
-
-        // stop the click event if the search term or category is falsey.
-        var search_input = search_term || search_state;
-
-        if(!search_input || !url_category) {
-            return false;
-        }
-
-        if (url_category === 'search_labels') {
-            $('form').attr("action", "{% url 'search_labels' %}").submit();
-        }
-        else if (url_category === 'search_events') {
-            $('form').attr("action", "{% url 'search_events' %}").submit();
-        }
-        else if (url_category === 'search_enforcements') {
-            $('form').attr("action", "{% url 'search_enforcements' %}").submit();
-        }
-        else if (url_category === 'search_manufacturers') {
-            $('form').attr("action", "{% url 'search_manufacturers' %}").submit();
-        }
-        else {
-            console.log('unknown category' + url_category);
-            return false;
-        }
-    });
-
-    // search bar typeahead using jquery-ui and states list in json
-    $("#search-state").autocomplete({
-        source: usStates,
-        delay: 200,
-        minLength: 1,
-        change: function(event, ui) {
-            console.log(ui);
-        }
-    });
-
-    // function to switch the text input from general to state with typeahead
-    function changeInput() {
-        if ($('#select-category').val() === 'search_enforcements') {
-           $('#search-term').hide().prop('name', '').val('');
-           $('#search-state').show().prop('name', 'q');
-        }
-        else {
-            $('#search-state').hide().prop('name', '').val('');
-            $('#search-term').show().prop('name', 'q');
-        }
-    }
-
-    // call change input to determine which text input to show/hide at page load and on change
-    changeInput();
-
-    $('#select-category').change(changeInput);
-
-// alpha navigation functionality
-    // show only items for the clicked letter
-    $(".alpha-nav a").click(function() {
-        var filter = $(this).data("filter");
-
-        if(filter === "all") {
-            $(".letter").show();    // show all
-        }
-        else {
-            $(".letter").hide();    // hide all
-            $("." + filter).show(); // show the one
-        }
-        return false;
-    });
-
-    // grey out letters without matches
-    $(".alpha-nav a").each(function() {
-        var filter = $(this).data("filter");
-        if (filter != "all") {
-            var count = $("." + filter).length;
-            if (count == 0) {
-                $(this).addClass("alpha-grey");
-            }
-        }
-
-    });
-
-// functionality to support accordion expand/collapse of divs for large bodies of text
-    $(".panel-title a").click(function() {
-        var panelTitle = this;
-        setTimeout(function() {
-            $(panelTitle).parents('.panel').first().find('.cell').each(function () {
-                var cell = this;
-                var text = $(cell).find(".text");
-                var more = $(cell).find(".more");
-                var less = $(cell).find(".less");
-
-                // correct for resizing
-                if ($(text).height() < 55) {
-                    $(more).hide();
-                    $(text).removeClass("text");
-                }
-
-                $(more).click(function () {
-                    $(cell).addClass("expanded");
-                    $(more).toggle();
-                    $(less).toggle();
-                });
-
-                $(less).click(function () {
-                    $(cell).removeClass("expanded");
-                    $(more).toggle();
-                    $(less).toggle();
-                });
-            });
-        }, 0);
-    });
-
-// functionality for +/- on accordion divs
-    $('.panel-title a').click(function() {
-        $(this).find(".glyphicon-menu-right, .glyphicon-menu-down").toggle();
-    });
-    </script>
+    <script src="{% static "js/fda-scripts.js" %}"></script>
 
     {% block extra_js %}
     {% endblock %}
-
+</div>
 </body>
 </html>
