--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -8,21 +8,13 @@
 <title>FDA Drug Monitor - Adverse Event Details</title>
 {% endblock %}
 
-{% block image %}
-    <img src="{% static "images/reactions-short.png" %}" class="img-responsive center-block" alt="adverse events banner image">
-{% endblock %}
-
-{% block search %}
-    {% include 'core/searchbar.html' with search_category='events'%}
-{% endblock %}
-
 {% block text %}
     <div class="row">
         <div class="col-xs-12">
-            <h1>Adverse Event Details<br />
+            <h1 class="page-title">Adverse Event Details<br />
                 <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
-            <p>
+            <p class="page-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
             pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
             consequat dictum eget in diam.
