--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -8,22 +8,14 @@
 <title>FDA Drug Monitor - Manufacturer Details</title>
 {% endblock %}
 
-{% block image %}
-    <img src="{% static "images/manufacturers-short.png" %}" class="img-responsive center-block" alt="drug labels banner image">
-{% endblock %}
-
-{% block search %}
-    {% include 'core/searchbar.html' with search_category='manufacturers'%}
-{% endblock %}
-
 {% block text %}
     <div class="row">
         <div class="col-xs-12">
-            <h1>Manufacturer Details
+            <h1 class="page-title">Manufacturer Details
                 <br/>
                 <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
-            <p>
+            <p class="page-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
             pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
             consequat dictum eget in diam.
