--- a/code/templates/core/tab_labels.html
+++ b/code/templates/core/tab_labels.html
@@ -1,48 +1,30 @@
 {% load url_tags %}
-<div class="panel-group" role="tablist" aria-multiselectable="true">
 
-    {% if labels|length == 0 %}
-        <p class="text-info">No results found for: {{ q|replace_plus_signs }}</p>
-    {% endif %}
-
-    {% for result in labels %}
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" href="#{{ prefix }}_panel{{ forloop.counter }}" aria-expanded="false">
-                        <i class="glyphicon glyphicon-menu-right"></i>
-                        <i class="glyphicon glyphicon-menu-down" style="display:none;"></i>
-                        {{ result.brand_name.0 }} ({{ result.manufacturer.0 }}) &mdash; SPL-ID {{ result.id }}
-                    </a>
-                </h4>
-            </div>
-            <div class="panel-collapse collapse" id="{{ prefix }}_panel{{ forloop.counter }}">
-                <div class="panel-body">
-                    <table class="table table-striped table-bordered">
-                        <caption class="sr-only">{{ result.brand_name.0 }}: {{ result.id }}</caption>
-                        <tbody>
-                            {% for key, value in result.items %}
-                                <tr>
-                                    <th scope="row"><strong>{{ key|replace_underscores|capfirst }}</strong></th>
-                                    <td class="cell">
-                                        <div class="text">
-                                          {% if value|is_list %}
-                                            {% for val in value %}
-                                              {{ val|default:"N/A" }}
-                                            {% endfor %}
-                                          {% else %}
-                                            {{ value|default:"N/A" }}
-                                          {% endif %}
-                                        </div>
-                                        <span class="more">More...</span>
-                                        <span class="less" style="display:none;">Less...</span>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-</div>
+{% for result in labels %}
+    <h3><i></i>{{ result.brand_name.0 }} ({{ result.manufacturer.0 }}) &mdash; SPL-ID {{ result.id }}</h3>
+    <div id="{{ prefix }}_panel{{ forloop.counter }}">
+        <table class="fda-table-default">
+            <!--caption class="sr-only">{{ result.brand_name.0 }}: {{ result.id }}</caption-->
+            <tbody>
+            {% for key, value in result.items %}
+                <tr>
+                    <th scope="row">{{ key|replace_underscores|capfirst }}</th>
+                    <td class="cell">
+                        <div class="text">
+                            {% if value|is_list %}
+                                {% for val in value %}
+                                  {{ val|default:"N/A" }}
+                                {% endfor %}
+                            {% else %}
+                                {{ value|default:"N/A" }}
+                            {% endif %}
+                        </div>
+                        <span class="more">More...</span>
+                        <span class="less" style="display:none;">Less...</span>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endfor %}
