--- a/code/core/static/css/_header.less
+++ b/code/core/static/css/_header.less
@@ -53,10 +53,10 @@
         padding: 0;
         .box-sizing;
         text-align:center;
-        &.one   {background-color: lighten(@fda_blue, 10%)};
-        &.two   {background-color: lighten(@fda_blue, 5%)};
-        &.three {background-color: lighten(@fda_blue, 0%)};
-        &.four  {background-color: darken(@fda_blue, 5%)};
+        //&.one   {background-color: lighten(@fda_blue, 10%)};
+        //&.two   {background-color: lighten(@fda_blue, 5%)};
+        //&.three {background-color: lighten(@fda_blue, 0%)};
+        //&.four  {background-color: darken(@fda_blue, 5%)};
         a {
           display:block;
           color: @white;
