--- a/code/templates/core/tab_events.html
+++ b/code/templates/core/tab_events.html
@@ -1,93 +1,76 @@
 {% load url_tags %}
-<div class="panel-group" role="tablist" aria-multiselectable="true">
 
-    {% if events|length == 0 %}
-        <p class="text-info">No results found for: {{ q|replace_plus_signs }}</p>
-    {% endif %}
-
-    {% for result in events %}
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" href="#{{ prefix }}_panel{{ forloop.counter }}" aria-expanded="false">
-                        <i class="glyphicon glyphicon-menu-right"></i>
-                        <i class="glyphicon glyphicon-menu-down" style="display:none;"></i>
-                        Safety Report ID: {{ result.safety_data.safety_report }}
-                    </a>
-                </h4>
-            </div>
-            <div class="panel-collapse collapse" id="{{ prefix }}_panel{{ forloop.counter }}">
-                <div class="panel-body">
-                    <table class="table table-striped table-bordered">
-                         <caption>Reporting Sources</caption>
-                         <tbody>
-                           {% for key, value in result.safety_data.items %}
-                           {% if key != 'safety_report' %}
-                           <tr>
-                             <th scope="row">
-                                 {{ key|replace_underscores|capfirst }}
-                             </th>
-                            <td>{% if value|is_list %}
-                                    {% if key == 'seriousness_details' %}
-                                      {% for val in value %}
-                                        {{ val|default:"N/A"|format_yes }}<br />
-                                      {% endfor %}
-                                    {% else %}
-                                      {% for val in value %}
-                                        {{ val|default:"N/A" }}<br />
-                                      {% endfor %}
-                                    {% endif %}
-                                {% else %}
-                                    {{ value|default:"N/A" }}
-                                {% endif %}
-                            </td>
-                           </tr>
-                           {% endif %}
-                           {% endfor %}
-                         </tbody>
-                    </table>
-                    <table class="table table-striped table-bordered">
-                        <caption>
-                         Patient Data
-                        </caption>
-                        <tbody>
-                           {% for key, value in result.patient_data.items %}
-                           <tr>
-                             <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                             <td>{% if value|is_list %}
-                                   {% for val in value %}
-                                     {{ val|default:"N/A" }}<br />
-                                   {% endfor %}
-                                 {% else %}
-                                   {{ value|default:"N/A" }}
-                                 {% endif %}
-                             </td>
-                           </tr>
-                           {% endfor %}
-                        </tbody>
-                    </table>
-                    <table class="table table-striped table-bordered">
-                        <caption>
-                         Drug Data
-                        </caption>
-                        <tbody>
-                           {% for key, value in result.label_data.items %}
-                           <tr>
-                             <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                             <td>{% if value|is_list %}
-                                     {% for val in value %}
-                                       {{ val|default:"N/A" }}<br />
-                                     {% endfor %}
-                                 {% else %}
-                                     {{ value|default:"N/A" }}
-                                 {% endif %}
-                             </td>
-                           </tr>
-                           {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-</div>
+{% for result in events %}
+    <h3><i></i>Safety Report ID: {{ result.safety_data.safety_report }}</h3>
+    <div id="{{ prefix }}_panel{{ forloop.counter }}">
+        <table class="fda-table-default">
+            <caption>Reporting Sources</caption>
+            <tbody>
+               {% for key, value in result.safety_data.items %}
+               {% if key != 'safety_report' %}
+                <tr>
+                <th scope="row">{{ key|replace_underscores|capfirst }}</th>
+                    <td>
+                    {% if value|is_list %}
+                        {% if key == 'seriousness_details' %}
+                          {% for val in value %}
+                            {{ val|default:"N/A"|format_yes }}<br />
+                          {% endfor %}
+                        {% else %}
+                          {% for val in value %}
+                            {{ val|default:"N/A" }}<br />
+                          {% endfor %}
+                        {% endif %}
+                    {% else %}
+                        {{ value|default:"N/A" }}
+                    {% endif %}
+                    </td>
+                </tr>
+               {% endif %}
+               {% endfor %}
+            </tbody>
+        </table>
+        <table class="fda-table-default">
+            <caption>
+                Patient Data
+            </caption>
+            <tbody>
+                {% for key, value in result.patient_data.items %}
+                <tr>
+                    <th scope="row">{{ key|replace_underscores|capfirst }}</th>
+                    <td>
+                        {% if value|is_list %}
+                            {% for val in value %}
+                                {{ val|default:"N/A" }}<br />
+                            {% endfor %}
+                        {% else %}
+                            {{ value|default:"N/A" }}
+                        {% endif %}
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <table class="fda-table-default">
+            <caption>
+                Drug Data
+            </caption>
+            <tbody>
+            {% for key, value in result.label_data.items %}
+                <tr>
+                    <th scope="row">{{ key|replace_underscores|capfirst }}</th>
+                    <td>
+                        {% if value|is_list %}
+                            {% for val in value %}
+                                {{ val|default:"N/A" }}<br />
+                            {% endfor %}
+                        {% else %}
+                            {{ value|default:"N/A" }}
+                        {% endif %}
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endfor %}
