Adding disabled style for alpha nav

--- a/code/core/static/css/_alpha.less
+++ b/code/core/static/css/_alpha.less
@@ -29,6 +29,12 @@
         .box-sizing;
         text-align: center;
         color: @fda_blue;
+        &.alpha-disabled {
+          color: @gray;
+          border-color: @gray;
+          background-color: @white_smoke;
+          cursor:not-allowed;
+        };
       };
       &.selected {
         a {
