--- a/code/core/static/css/_header.less
+++ b/code/core/static/css/_header.less
@@ -102,6 +102,10 @@
       input {
         width: 300px;
       };
+      ::-webkit-input-placeholder {color: @charcoal;}
+      :-moz-placeholder {color: @charcoal;}
+      ::-moz-placeholder {color: @charcoal;}
+      :-ms-input-placeholder {color: @charcoal;}
       button {
         span {
             position: absolute;
