--- a/code/core/static/css/_table.less
+++ b/code/core/static/css/_table.less
@@ -26,3 +26,17 @@
     };
   };
 };
+.cell .text {
+    max-height: 55px;
+    overflow: hidden;
+}
+
+.expanded .text {
+    max-height: none;
+    overflow: visible;
+}
+
+.more, .less {
+    cursor: pointer;
+    color: @link_color;
+}
