--- a/code/core/static/css/_tabs.less
+++ b/code/core/static/css/_tabs.less
@@ -4,6 +4,7 @@
     .inline;
     padding-top: 10px;
     border-bottom: 1px solid @gray;
+    .margin-bottom-quad;
     li {
       padding: 0 25px 0 0;
       margin: 0 0 -1px;
