--- a/code/core/static/css/style.css
+++ b/code/core/static/css/style.css
@@ -2199,6 +2199,18 @@ input[type="checkbox"][readonly] {
   box-sizing: border-box;
   text-align: center;
 }
+.fdahead .fdahead-nav ul li.one {
+  background-color: #007dd2;
+}
+.fdahead .fdahead-nav ul li.two {
+  background-color: #006eb9;
+}
+.fdahead .fdahead-nav ul li.three {
+  background-color: #005f9f;
+}
+.fdahead .fdahead-nav ul li.four {
+  background-color: #005086;
+}
 .fdahead .fdahead-nav ul li a {
   display: block;
   color: #FFFFFF;
@@ -2236,6 +2248,18 @@ input[type="checkbox"][readonly] {
   position: absolute;
   right: 2.0242914979757%;
   top: 20px;
+}
+.fdahead .fdahead-search ::-webkit-input-placeholder {
+  color: #333333;
+}
+.fdahead .fdahead-search :-moz-placeholder {
+  color: #333333;
+}
+.fdahead .fdahead-search ::-moz-placeholder {
+  color: #333333;
+}
+.fdahead .fdahead-search :-ms-input-placeholder {
+  color: #333333;
 }
 .fdahead .fdahead-search form {
   margin: 0;
@@ -2633,6 +2657,7 @@ label.readonly {
   list-style: none;
   padding-top: 10px;
   border-bottom: 1px solid #CCCCCC;
+  margin-bottom: 21px;
 }
 .fda-tabs-interface ul .plain {
   margin-left: 25px;
@@ -2753,6 +2778,19 @@ label.readonly {
     width: 35%;
   }
 }
+.cell .text {
+  max-height: 55px;
+  overflow: hidden;
+}
+.expanded .text {
+  max-height: none;
+  overflow: visible;
+}
+.more,
+.less {
+  cursor: pointer;
+  color: #005f9f;
+}
 .icon {
   display: inline-block;
   width: 5px;
@@ -2816,6 +2854,12 @@ label.readonly {
   box-sizing: border-box;
   text-align: center;
   color: #005f9f;
+}
+.fda-alpha-nav ol li a.alpha-disabled {
+  color: #CCCCCC;
+  border-color: #CCCCCC;
+  background-color: #F5F5F5;
+  cursor: not-allowed;
 }
 .fda-alpha-nav ol li.selected a {
   background-color: #005f9f;
