Alpha nav and search bar fix

--- a/code/core/static/css/_alpha.less
+++ b/code/core/static/css/_alpha.less
@@ -60,9 +60,17 @@
           width: 20%
         };
         &.K {
-          border-right: none;
+          border-right: 2px solid @white;
         };
         &.L {
+          border-left: 2px solid @white;
+        };
+        &.F,
+        &.P {
+          border-right: none;
+        };
+        &.G,
+        &.Q {
           border-left: none;
         };
       };
