--- a/code/core/static/css/_header.less
+++ b/code/core/static/css/_header.less
@@ -131,12 +131,15 @@
         overflow: hidden;
         select {
           width: 40%;
+          float:left;
         };
         input {
           width: 55%;
+          float:left;
         };
         button {
           width: 5%;
+          float:right;
         };
       };
     };
