--- a/code/templates/core/alphanav.html
+++ b/code/templates/core/alphanav.html
@@ -9,8 +9,8 @@
         <li><a data-filter="c" href="#">C</a></li>
         <li><a data-filter="d" href="#">D</a></li>
         <li><a data-filter="e" href="#">E</a></li>
-        <li><a data-filter="f" href="#">F</a></li>
-        <li><a data-filter="g" href="#">G</a></li>
+        <li class="F"><a data-filter="f" href="#">F</a></li>
+        <li class="G"><a data-filter="g" href="#">G</a></li>
         <li><a data-filter="h" href="#">H</a></li>
         <li><a data-filter="i" href="#">I</a></li>
         <li><a data-filter="j" href="#">J</a></li>
@@ -19,8 +19,8 @@
         <li><a data-filter="m" href="#">M</a></li>
         <li><a data-filter="n" href="#">N</a></li>
         <li><a data-filter="o" href="#">O</a></li>
-        <li><a data-filter="p" href="#">P</a></li>
-        <li><a data-filter="q" href="#">Q</a></li>
+        <li class="P"><a data-filter="p" href="#">P</a></li>
+        <li class="Q"><a data-filter="q" href="#">Q</a></li>
         <li><a data-filter="r" href="#">R</a></li>
         <li><a data-filter="s" href="#">S</a></li>
         <li><a data-filter="t" href="#">T</a></li>
