--- a/code/templates/core/searchbar.html
+++ b/code/templates/core/searchbar.html
@@ -10,7 +10,7 @@
             <option value="search_manufacturers" {% if search_category == 'manufacturers' %} selected="selected" {% endif %}>Manufacturers</option>
         </select><!--
         --><input type="search" class="" name="q" id="search-term" placeholder="Enter keyword"><!--
-        --><input class="" type="text" id='search-state' placeholder="Enter US state" style="display:none">
-        <button class="" type="submit" id="search-category"><span>GO</span><i></i></button>
+        --><input class="" type="text" id='search-state' placeholder="Enter US state" style="display:none"><!--
+        --><button class="" type="submit" id="search-category"><span>GO</span><i></i></button>
     </form>
 </div>
